--- a/StoreApi/appsettings.json
+++ b/StoreApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Server=DESKTOP-01TMK3G;Database=Store;User=developer;Password=123456789"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
